dlogfile.txt
  File "check.py", line 2
    print "hello"
    ^
IndentationError: expected an indented block
